# cloudplayer

./: .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  DEV.md  Makefile  PROJECT_REVIEW.md  README.en.md  README.md  Taskfile.yml  app_lyrics_cache.go  app_lyrics_persistence.go  app_state.go  cloudplayer-release.jks  cloudplayer_service.go  cloudplayer_service_kugou_auth_sms.go  cloudplayer_service_kugou_import.go  cloudplayer_service_kugou_playlists.go  cloudplayer_service_kugou_types.go  cloudplayer_service_playback.go  cloudplayer_service_playlists.go  cloudplayer_service_settings.go  cloudplayer_service_types.go  desktop_lyrics.html  desktop_lyrics_hover_tracker.go  desktop_lyrics_hover_tracker_darwin.go  desktop_service.go  events.go  global_hotkeys_apply_other.go  global_hotkeys_desktop.go  global_hotkeys_stub.go  go.mod  go.sum  index.html  main.go  main_window_close_flow.go  media_proxy_handler.go  package-lock.json  package.json  pubspec.yaml
.github/: release-body-zh.md
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
bridge/: bootstrap.go  dispatch.go  json.go  (+6 more)
src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: probe_captcha.rs
src-tauri/permissions/: main-app.toml
src-tauri/src/: captcha_slider.rs  commands.rs  config.rs  db.rs  download.rs  download_meta.rs  global_hotkeys.rs  import_enrich.rs  lddc_parse.rs  lib.rs  logging.rs  lrc_embedded.rs  lrc_format.rs  lyric_kugou.rs  lyric_qq.rs  lyric_replace.rs  lyrics.rs  pjmp3.rs  qrc_des.rs  share_link.rs
(+745 files in other folders)
